--- a/index.html
+++ b/index.html
@@ -1097,12 +1097,17 @@
 
         <td class="title"><%- title %></td>
         <td class="date"><%- date %></td>
+        <td class="delete">
+            <button class="button">
+                <div class="button-icon">
+                    <svg viewBox="0 0 32 32">
+                        <use xlink:href="#close"></use>
+                    </svg>
+                </div>
+                delete
+            </button>
+        </td>
     </script>
-
-
-
-
-
 
     <!--
     <script src="js/vendor/require.config.js"></script>
@@ -1128,6 +1133,8 @@
     <script src="js/views/app-view.js"></script>
 
     <script src="js/routers/router.js"></script>
+
+    <script src="js/vendor/chance.js"></script>
 
     <script src="js/defaults.js"></script>
     <script src="js/app.js"></script>
