--- a/index.html
+++ b/index.html
@@ -1124,10 +1124,12 @@
             </button>
         </td>
     </script>
-    <!--
+<!--
     <script src="js/vendor/require.config.js"></script>
-    <script src="js/vendor/require.js" data-main="app"></script>
- -->
+     -->
+    <script src="js/vendor/require.js" data-main="js/app"></script>
+
+<!--
     <script src="js/vendor/chance.js"></script>
     <script src="js/vendor/zepto.js"></script>
     <script src="js/vendor/underscore.js"></script>
@@ -1151,5 +1153,6 @@
 
     <script src="js/defaults.js"></script>
     <script src="js/app.js"></script>
+     -->
 </body>
 </html>
