--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,8 @@
 <!--
     <script src="js/vendor/require.config.js"></script>
      -->
-    <script src="js/vendor/require.js" data-main="js/app"></script>
+    <script src="js/config.js"></script>
+    <script src="js/vendor/require.js" data-main="app"></script>
 
 <!--
     <script src="js/vendor/chance.js"></script>
