stupid typo fix

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Expence Manager</title>
+    <title>Expense Manager</title>
     <link rel="stylesheet" href="style/main.css" />
 </head>
 
@@ -1028,13 +1028,13 @@
 
             <div id="menu-items">
                 <menu>
-                    <li id="menu-item-expences" class="menu-item">
+                    <li id="menu-item-expenses" class="menu-item">
                         <div class="menu-item-icon">
                             <svg viewBox="0 0 32 32">
                                 <use xlink:href="#list"></use>
                             </svg>
                         </div>
-                        <a href="#/expences">expences</a>
+                        <a href="#/expenses">expenses</a>
                     </li>
                     <li id="menu-item-categories" class="menu-item">
                         <div class="menu-item-icon">
@@ -1062,20 +1062,20 @@
         <div id="content-wrapper">
 
             <div id="content-header">
-                <button id="button-add-expence" class="button">
+                <button id="button-add-expense" class="button">
                     <div class="button-icon">
                         <svg viewBox="0 0 32 32">
                             <use xlink:href="#plus"></use>
                         </svg>
                     </div>
-                    add expence
+                    add expense
                 </button>
             </div>
 
             <div id="content">
 
-                <section class="content-section" id="expences">
-                    <table id="expence-list" cellpadding="0" cellspacing="0" border="0" width="80%"></table>
+                <section class="content-section" id="expenses">
+                    <table id="expense-list" cellpadding="0" cellspacing="0" border="0" width="80%"></table>
                 </section>
 
                 <section class="content-section" id="categories">
