--- a/index.html
+++ b/index.html
@@ -1061,25 +1061,16 @@
         </div>
         <div id="content-wrapper">
 
-            <div id="content-header">
-                <button id="button-add-expense" class="button">
-                    <div class="button-icon">
-                        <svg viewBox="0 0 32 32">
-                            <use xlink:href="#plus"></use>
-                        </svg>
-                    </div>
-                    add expense
-                </button>
-            </div>
+            <div id="content-header"></div>
 
             <div id="content">
 
                 <section class="content-section" id="expenses">
-                    <table id="expense-list" cellpadding="0" cellspacing="0" border="0" width="80%"></table>
+                    <!-- <table id="expense-list" cellpadding="0" cellspacing="0" border="0" width="80%"></table> -->
                 </section>
 
                 <section class="content-section" id="categories">
-                    <table id="category-list" cellpadding="0" cellspacing="0" border="0" width="80%"></table>
+                   <!--  <table id="category-list" cellpadding="0" cellspacing="0" border="0" width="80%"></table> -->
                 </section>
 
                 <section class="content-section" id="statistics">
@@ -1091,6 +1082,6 @@
     </div>
 
     <script src="js/config.js"></script>
-    <script src="js/vendor/require.js" data-main="app"></script>
+    <script src="js/vendor/require.js" data-main="main"></script>
 </body>
 </html>
