--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,8 @@
             <div id="content">
 
                 <section class="content-section" id="expences">
-                    <table id="expence-list" cellpadding="0" cellspacing="0" border="0" width="80%"></table>
+                    <!-- <table id="expence-list" cellpadding="0" cellspacing="0" border="0" width="80%"></table> -->
+                    <div id="expence-list"></div>
                 </section>
 
                 <section class="content-section" id="categories">
@@ -1089,15 +1090,19 @@
             </div>
         </div>
     </div>
-
-
+    
     <script type="text/template" id="expence-view-template">
-        <td class="amount"><%- amount %></td>
-        <td class="category"><%= category %></td>
-
-        <td class="title"><%- title %></td>
-        <td class="date"><%- date %></td>
-        <td class="delete">
+        <div class="amount"><%- amount %></div>
+        <div class="category"><%= category %></div>
+        <div class="options-wrapper">
+            <div class="arrow down"></div>
+            <div class="options">
+                <div class="option edit">Edit</div>
+                <div class="option delete">Delete</div>
+            </div>
+        </div>
+        <!--
+        <div class="delete">
             <button class="button">
                 <div class="button-icon">
                     <svg viewBox="0 0 32 32">
@@ -1106,7 +1111,10 @@
                 </div>
                 delete
             </button>
-        </td>
+        </div>
+        -->
+        <div class="title"><%- title %></div>
+        <div class="date"><%- date %></div>
     </script>
 
     <script type="text/template" id="category-view-template">
