--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,6 @@
             <div id="content">
 
                 <section class="content-section" id="expences">
-                    <!-- <table id="expence-list" cellpadding="0" cellspacing="0" border="0" width="80%"></table> -->
                     <div id="expence-list"></div>
                 </section>
 
@@ -1095,24 +1094,12 @@
         <div class="amount"><%- amount %></div>
         <div class="category"><%= category %></div>
         <div class="options-wrapper">
-            <div class="arrow down"></div>
+            <div class="arrow"></div>
             <div class="options">
                 <div class="option edit">Edit</div>
                 <div class="option delete">Delete</div>
             </div>
         </div>
-        <!--
-        <div class="delete">
-            <button class="button">
-                <div class="button-icon">
-                    <svg viewBox="0 0 32 32">
-                        <use xlink:href="#close"></use>
-                    </svg>
-                </div>
-                delete
-            </button>
-        </div>
-        -->
         <div class="title"><%- title %></div>
         <div class="date"><%- date %></div>
     </script>
