--- a/index.html
+++ b/index.html
@@ -1059,27 +1059,16 @@
                 some contact info
             </div>
         </div>
+
         <div id="content-wrapper">
 
             <div id="content-header"></div>
 
-            <div id="content">
+            <div id="content"></div>
 
-                <section class="content-section" id="expenses">
-                    <!-- <table id="expense-list" cellpadding="0" cellspacing="0" border="0" width="80%"></table> -->
-                </section>
-
-                <section class="content-section" id="categories">
-                   <!--  <table id="category-list" cellpadding="0" cellspacing="0" border="0" width="80%"></table> -->
-                </section>
-
-                <section class="content-section" id="statistics">
-                    statistics
-                </section>
-
-            </div>
         </div>
     </div>
+
     <script src="js/config.js"></script>
     <script src="js/vendor/require.js" data-main="main"></script>
 </body>
