expenses restyled, minor restylings

--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 <head>
     <title>Expense Manager</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="style/main.css" />
+
 </head>
+
+<body>
 
 <svg id="svg-source" height="0" version="1.1"
   xmlns="http://www.w3.org/2000/svg" style="position:absolute; margin-left: -100%"
@@ -1018,8 +1024,6 @@
   </g>
 </svg>
 
-
-<body>
     <div id="main-page">
         <div id="main-menu">
             <div id="menu-header">
